--- a/savefiletodownloads.html
+++ b/savefiletodownloads.html
@@ -1,37 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html>
+<html>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>How to Create and Save text file in JavaScript</title>
-    <script src="filesaver.js"></script>
-    <script>
+    <title>Create and Save a docx file in JavaScript</title>
+  </head>
 
-		function saveDynamicDataToFile() {
-            
-
-            const confirmed = confirm('Saving the document will end your session and begin a new session. Do you want to proceed?')
-
-            if(confirmed) {
-                var userInput = document.getElementById("myText").value;
-			
-                var blob = new Blob([userInput], { type: "text/plain;charset=utf-8" });
-                saveAs(blob, "dynamic.docx");
-            }else {
-                console.log("User clicked Cancel");
-                return false
-            }
-            
-        }
-
-    </script>
-</head>
-<body>
-
-    <textarea id="myText" rows="4" cols="50">We love to share our experiments, ideas, and knowledge with everyone by writing articles on the latest technology trends.
-    </textarea>
-
-    <button type="button" onclick="saveDynamicDataToFile();">Click to Save</button>
-	
-</body>
+  <body>
+    <button onclick="generate()">Generate Word Document</button>
+    <script src="https://unpkg.com/docx@7.1.0/build/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
